syntax = "proto3";

option go_package="./user_pb";

package user_pb; 


//定义消息体(字段=序列号)


message UserInfo{
  
    int64 id=1;
    string name=2;
    int64  follow_count=3;
    int64 follower_count=4;
    bool is_follow=5;
    string avatar=6;
    string background_image=7;
    string signature=8;
    int64 total_favorited=9;
    int64 work_count=10;
    int64 favorite_count=11;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}
message RegisterResponse {

 int64 status_code = 1;  
 string status_msg = 2;
 int64 user_id=3;
  string token = 4;
}




message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 status_code = 1;  
  string status_msg = 2;
 int64 user_id=3;
  string token = 4;
}


message UserInfoRequest {
  string user_id = 1;
  string token = 2;
}

message UserInfoResponse {
  int64 status_code = 1;  
  string status_msg = 2;
  UserInfo user=3;
}



//定义服务接口

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse);
}

